--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,7 +1,10 @@
-$color-bg: #240046;
-$color-bg-variant: #0077b6;
+//$color-bg: #240046;
+$color-bg: #350166;
+//$color-bg-variant: #0077b6;
+$color-bg-variant: #08a8ff;
 $color-white: #fff;
 $color-light: #90e0ef;
+//$color-light: #00a8db;
 $color-primary: #00b4d8;
 
 $container-width-lg: 75%;
